--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,15 @@ body {
   	margin: auto;
 }
 
+p {
+	margin: 0;
+  	padding: 0;
+}
+
+img {
+	border-radius: 8px;
+}
+
 /* Title */
 .header {
 	font-size: 36px;
@@ -40,17 +49,13 @@ h5 {
 	width: 100%;
 }
 
-p {
-	margin: 0;
-  	padding: 0;
-}
-
 /* Add a card effect for posts */
 .card {
 	background-color: #424446;
 	border-color: #ffffff;
 	padding: 20px;
 	margin-top: 10px;
+	margin-bottom: 10px;
 	color: #ffffff;
 	border-radius: 5px;
 }
@@ -144,6 +149,7 @@ p {
 		border-color: #fff;
 		padding: 20px;
 		margin-top: 10px;
+		margin-bottom: 10px;
 		color: #ffffff;
 		border-radius: 5px;
     }
