--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,6 +131,11 @@ h5 {
 	color: #ffffff;
 }
 
+video {
+	width: 65%;
+  	height: auto;
+}
+
 /* Responsive layout */
 @media screen and (max-width: 800px) {
 	body {
@@ -165,7 +170,7 @@ h5 {
         width: 100%;
     }
     video {
-    	width: 280px;
-    	height: 280px;
+    	width: 100%;
+		height: auto;
     }
 }
