--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,6 +136,24 @@ video {
   	height: auto;
 }
 
+.iframe-container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */
+}
+
+.responsive-iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	border: none;
+}
+
 /* Responsive layout */
 @media screen and (max-width: 800px) {
 	body {
